Apply typo fix suggestions from code review
Co-authored-by: Evan Sosenko <evan@pureskill.gg>

--- a/notebooks/tutorial/7 - Getting data from the ADX.ipynb
+++ b/notebooks/tutorial/7 - Getting data from the ADX.ipynb
@@ -8,7 +8,7 @@
     "------------\n",
     "\n",
     "**FPS Critic Inc., owner of PureSkill.gg, is not liable for any AWS\n",
-    "costs your incur. Run this notebook only if you understand and accept\n",
+    "costs you incur. Only run this notebook if you understand and accept\n",
     "the AWS billing implications.**\n",
     "\n",
     "------------"
@@ -23,11 +23,11 @@
     "\n",
     "This notebook will help you download data from the main dataset off of the data exchange.\n",
     "\n",
-    "Here are the definition of some of the terms around data on the AWS Data Exchange (ADX):\n",
+    "Here are some definitions around the AWS Data Exchange (ADX):\n",
     "- Data Exchange: AWS service that hosts the data.\n",
     "- Data Product: Listing on the ADX where we publish the csds data.\n",
     "- Data Set: A container for one type of data.\n",
-    "- Revision: For the csds data, each revision is equivalent to one day of data. This allows for granularity for both data volume and date range.\n",
+    "- Revision: For the csds data, each revision is equivalent to one day of data. This allows granularity for both data volume and date range.\n",
     "\n",
     "This notebook will transfer a selected set of revisions from the ADX to an S3 bucket on your AWS account. It will optionally allow you to enable automatic transfer of new revisions to S3."
    ]
@@ -42,12 +42,11 @@
     "While the data set subscription as provided is free, **exporting and downloading the data set will incur a real money cost to your AWS bill according to their pricing**. Even if you are on the AWS free tier, the volume of data in this data set may exceed the free tier limits. We will summarize the expected costs, however we cannot guarantee these estimates. We recommend working with a few revisions in the data set to get real-world cost estimates for your use case.\n",
     "\n",
     "Things that will  cost money:\n",
-    "- Exporting the data to S3 will generate in PUT, COPY, POST, LIST requests.\n",
+    "- Exporting the data to S3 will generate PUT, COPY, POST, LIST requests.\n",
     "- Keeping the data in S3 will incur cost for storing objects.\n",
     "- If you setup auto-export of the data, you will get daily exports into your S3 bucket until you choose to disable the automatic process. This will incur increasing daily storage cost as the total data stored in your bucket will grow each day.\n",
     "- Downloading data from S3 across the internet, including to your local machine, will incur data transfer charges.\n",
     "- Exporting the data from the data exchange to a bucket outside of the region the data set is hosted in will incur additional data transfer charges.\n",
-    "\n",
     "\n",
     "For example, let's compute the cost to export a revision to a bucket in in us-east-2 and download it to our local machine. Assume this revision has size 13GB, with 350 matches, and thus 11550 objects.\n",
     "\n",
@@ -60,14 +59,9 @@
     "- Thus it costs about \\$1.66 to download a single revision and store it on S3 for 1 month.\n",
     "https://calculator.aws/#/estimate?id=73fe611b111a0d2950d92ad2b10062b9cc01a91d\n",
     "\n",
+    "You may use [this calculator](https://calculator.aws) to estimate your costs tailored to your account and region. For full S3 pricing information, refer to [the amazon pricing page](https://aws.amazon.com/s3/pricing/)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "You may use [this calculator](https://calculator.aws) to estimate your costs tailored to your account and region:  For full S3 pricing information, refer to [the amazon pricing page](https://aws.amazon.com/s3/pricing/)\n",
-    "\n",
-    "We have included a calculator below to assist you in calculating your costs, however, we do not guarantee its accuracy and **you** are responsible for the final calculations of your cost and paying your AWS bill."
+    "We have included a calculator below to assist you in calculating your costs, however, we do not guarantee its accuracy. **You** are responsible for the final cost and payment of your AWS bill."
    ]
   },
   {
@@ -86,13 +80,13 @@
     "- April 2022: 8,717\n",
     "\n",
     "\n",
-    "We can use the month of April to demonstrate the volume. The 30 data revisions in april in total had:\n",
+    "We can use the month of April to demonstrate the volume. The 30 revisions in April in total had:\n",
     "\n",
     "- 286,671 files\n",
     "- 8,717 matches\n",
     "- 275 GB\n",
     "\n",
-    "These values are used in the calculator below to estimate costs on a per-revision basis. Though, the number of matches per day is variable.  For the first batch of historical revisions, you can find [the approximate number of matches for each day](https://docs.pureskill.gg/datascience/adx/csgo/csds/revisions). There is quite a large variance in some days due to spikes in user activity.\n",
+    "These values are used in the calculator below to estimate costs on a per-revision basis. Though, the number of matches per day is variable.  For the first batch of historical revisions, you can find [the approximate number of matches for each day](https://docs.pureskill.gg/datascience/adx/csgo/csds/revisions). There is quite a large variance in some days due to spikes in user activity. The total number of matches in a revision will not exceed 1,600, however there may be more than one revision per day to accommodate additional volume.\n",
     "\n",
     "------------"
    ]
@@ -137,7 +131,7 @@
    "source": [
     "# 2. Estimate Costs \n",
     "\n",
-    "We provide the estimates below for convienence but do not guarantee their accuracy or applicability to your AWS account. You should perform your own calculations using the cost calculator provided by AWS."
+    "We provide the estimates below for convenience, but do not guarantee their accuracy or applicability to your AWS account. You should perform your own calculations using the cost calculator provided by AWS."
    ]
   },
   {
@@ -328,11 +322,11 @@
     "\n",
     "You must set **transfer_option** in the cell below. Here are the options and what they do:\n",
     "\n",
-    "- none: do no transfers and incur no charges on my AWS bill.\n",
-    "- range: Transfer a range of revisions from the ADX to your S3 bucket\n",
-    "- latest: Transfer the latest revision from the ADX to your S3 bucket\n",
-    "- all: Transfer all revisions from the ADX to your S3 bucket\n",
-    "- slowly-download-to-local: Transfer a range of revisions from the ADX to your S3 bucket\n",
+    "- none: Do not transfer any data.\n",
+    "- range: Transfer a range of revisions from the ADX to your S3 bucket.\n",
+    "- latest: Transfer the latest revision from the ADX to your S3 bucket.\n",
+    "- all: Transfer all revisions from the ADX to your S3 bucket.\n",
+    "- slowly-download-to-local: Transfer a range of revisions from the ADX to your local hard drive.\n",
     "\n",
     "To download a single revision, set the `start_date` and `end_date` to the same day."
    ]
@@ -363,9 +357,9 @@
     "prefix = None\n",
     "create_destination_bucket = True\n",
     "\n",
-    "# this will set a lifecycle rule on the bucket if created via this notebook\n",
-    "# if the bucket already exists, no rule will be set.\n",
-    "# set to None for no expiration\n",
+    "# This will set a lifecycle rule on the bucket if created via this notebook.\n",
+    "# If the bucket already exists, no rule will be set.\n",
+    "# Set to None for no expiration.\n",
     "days_to_keep_data_on_s3 = 30 \n",
     "\n",
     "# set based on what you want to transfer\n",
@@ -386,7 +380,7 @@
     "if transfer_option == 'slowly-download-to-local':\n",
     "    warnings.warn(\"DOWNLOADING STRAIGHT TO LOCAL WILL BE SLOW. \"\n",
     "                  \"PERHAPS DAYS FOR A SINGLE REVISION. \"\n",
-    "                  \"It will be 100x or more faster to transfer to S3 then download from there.\")"
+    "                  \"It will be 100x faster or more to transfer to S3 then download from there.\")"
    ]
   },
   {
@@ -421,7 +415,6 @@
     "    return False # already exists\n",
     "\n",
     "def get_bucket_name(bucket, account_id):\n",
-    "    print(bucket)\n",
     "    if bucket is not None:\n",
     "        return bucket\n",
     "    \n",
@@ -663,7 +656,7 @@
     "You can also disable this automatic job through the AWS console by:\n",
     "\n",
     "1. Navigating to the ADX\n",
-    "1. clicking on \"Entitled data\" under \"My Subscriptions\"\n",
+    "1. Clicking on \"Entitled data\" under \"My Subscriptions\"\n",
     "1. Click on \"PureSkill.gg Competitive CS:GO Gameplay\"\n",
     "1. Click on the data set named \"pureskillgg-csgo-production-dataexchange-csds-0\"\n",
     "1. Look under \"Auto-export job destinations\" and you should be able to Remove any outstanding jobs."
