Add download step from csds (#4)
* Mention documentation site

* Create 7 - Getting data from the ADX.ipynb

* Update notebooks/tutorial/2 - Download data.ipynb

Co-authored-by: Evan Sosenko <evan@pureskill.gg>

* Update notebooks/tutorial/7 - Getting data from the ADX.ipynb

Co-authored-by: Evan Sosenko <evan@pureskill.gg>

* Update notebooks/tutorial/7 - Getting data from the ADX.ipynb

Co-authored-by: Evan Sosenko <evan@pureskill.gg>

* Update notebooks/tutorial/7 - Getting data from the ADX.ipynb

Co-authored-by: Evan Sosenko <evan@pureskill.gg>

* Update notebooks/tutorial/7 - Getting data from the ADX.ipynb

Co-authored-by: Evan Sosenko <evan@pureskill.gg>

* Update revision link and text. Add warning on pathing.

* Update 7 - Getting data from the ADX.ipynb

* Update paragraph on transferring data.

* Apply typo fix suggestions from code review

Co-authored-by: Evan Sosenko <evan@pureskill.gg>

* Fix some code, add image. Other typos.

Co-authored-by: Evan Sosenko <evan@pureskill.gg>

--- a/notebooks/tutorial/2 - Download data.ipynb
+++ b/notebooks/tutorial/2 - Download data.ipynb
@@ -16,6 +16,8 @@
     "\n",
     "There are 33 channels, and you can see more information about each in the manifest file. They are all compressed parquet files except for the manifest, which is gzipped json. When we read in a CSDS file, we generally don't need all channels, so our reader will accept \"instructions\" that describe which channels and columns to read. An example of some instructions are in step 5.\n",
     "\n",
+    "Check out the [full documentation for all channels and columns](https://docs.pureskill.gg/datascience/adx/csgo/csds_documentation/).\n",
+    "\n",
     "Each demo goes through our parser then through a post-parser processor (PPP) that fixes certain things and extends some channels with info from other channels. For instance, most events have a `player_id` attached to them, but this ID can be two different numbers for the same person if they disconnect and reconnect to the server. Therefore we added `player_id_fixed` which is tied to steam id and does not change even if a player disconnects or reconnects."
    ]
   },
