Update setup link, header tome name, root path ends

--- a/notebooks/tutorial/1 - Setup.ipynb
+++ b/notebooks/tutorial/1 - Setup.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "## Setup your AWS credentials\n",
     "\n",
-    "Follow the [guide on setting up AWS credentials](https://docs.aws.amazon.com/sdk-for-java/v1/developer-guide/setup-credentials.html) to properly download things from the AWS Data Exchange."
+    "Follow the [guide on setting up AWS credentials](https://boto3.amazonaws.com/v1/documentation/api/latest/guide/quickstart.html#configuration) to properly download things from the AWS Data Exchange."
    ]
   },
   {
@@ -63,13 +63,13 @@
     "import os\n",
     "import platform\n",
     "\n",
-    "header_name = 'header_tome'\n",
+    "header_name = 'header_tome.2022-05-15,2022-05-15'\n",
     "ds_type = 'csds'\n",
     "\n",
     "if collection_path == 'PATH/TO/TOMES':\n",
-    "    collection_path = os.path.join('..','..','tmp','tomes')\n",
+    "    collection_path = os.path.join('..','..','tmp','tome_root')\n",
     "if ds_collection_path == 'PATH/TO/CSDS':\n",
-    "    ds_collection_path = os.path.join('..','..','tmp','data')\n",
+    "    ds_collection_path = os.path.join('..','..','tmp','csds_root')\n",
     "    \n",
     "collection_path = os.path.abspath(collection_path)\n",
     "ds_collection_path = os.path.abspath(ds_collection_path)\n",
