--- a/notebooks/tutorial/2 - Download data.ipynb
+++ b/notebooks/tutorial/2 - Download data.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6015f4af",
    "metadata": {},
    "outputs": [],
@@ -54,10 +54,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "769a14fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PURESKILLGG_TOME_DEFAULT_HEADER_NAME is header_tome\n",
+      "PURESKILLGG_TOME_DS_TYPE is csds\n",
+      "PURESKILLGG_TOME_COLLECTION_PATH is C:\\Users\\billf\\Desktop\\pureskill_git_repo\\makenew-pyskill\\tmp\\tomes\n",
+      "PURESKILLGG_TOME_DS_COLLECTION_PATH is C:\\Users\\billf\\Desktop\\pureskill_git_repo\\makenew-pyskill\\tmp\\data\n"
+     ]
+    }
+   ],
    "source": [
     "# Set environment variables\n",
     "setup_notebook()"
@@ -65,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ca8607a0",
    "metadata": {},
    "outputs": [],
@@ -78,10 +89,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "dc4195b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "working on  https://d1ewbp317vsrbd.cloudfront.net/a1b80cdb-d15a-4828-b955-f0f42c45109c.zip\n",
+      "working on  https://d1ewbp317vsrbd.cloudfront.net/d39ba8f3-a61f-4bad-8550-42ec3fcf0e67.zip\n",
+      "working on  https://d1ewbp317vsrbd.cloudfront.net/dfc0bf8a-2cd1-4073-9725-c70018f2c2fd.zip\n",
+      "working on  https://d1ewbp317vsrbd.cloudfront.net/f7030153-7383-481a-87eb-450fa5cc408e.zip\n",
+      "working on  https://d1ewbp317vsrbd.cloudfront.net/87303b35-34eb-4590-a058-f4d734987291.zip\n",
+      "working on  https://d1ewbp317vsrbd.cloudfront.net/24321cdc-d788-46b4-8c2d-a7d385cdcd75.zip\n",
+      "working on  https://d1ewbp317vsrbd.cloudfront.net/85e30395-da9a-4f40-b3eb-e173ab42df6d.zip\n"
+     ]
+    }
+   ],
    "source": [
     "# # Choose our Data Science collection path as the location to save\n",
     "dataset_sample_urls = [\n",
@@ -103,6 +128,14 @@
     "    zip_ref = zipfile.ZipFile(bytes_content)\n",
     "    zip_ref.extractall(ds_collection_path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fabeb60",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
