Remove path_depth and fix subheader tome name

--- a/notebooks/tutorial/3 - Make header tome.ipynb
+++ b/notebooks/tutorial/3 - Make header tome.ipynb
@@ -86,7 +86,7 @@
    "outputs": [],
    "source": [
     "if not header_loader.exists:\n",
-    "    header_loader = curator.create_header_tome(path_depth=7)"
+    "    header_loader = curator.create_header_tome()"
    ]
   },
   {
@@ -123,7 +123,7 @@
     "def map_name_selector(map_name):\n",
     "    return lambda df: df['map_name']==map_name\n",
     "\n",
-    "subheader_loader = curator.create_subheader_tome('subheader_dust2', map_name_selector('de_dust2'))"
+    "subheader_loader = curator.create_subheader_tome('subheader_dust2.2022-05-15,2022-05-15', map_name_selector('de_dust2'))"
    ]
   },
   {
