Add note about default tome names

--- a/notebooks/tutorial/3 - Make header tome.ipynb
+++ b/notebooks/tutorial/3 - Make header tome.ipynb
@@ -110,7 +110,11 @@
    "source": [
     "## Make subheaders too\n",
     "\n",
-    "You might want to analyze players on a specific map, rank, or platform. You can create \"subheaders\" that are a filtered view of the main header. The `create_subheader_tome` will create the subheader with the specified filter applied to the header tome."
+    "You might want to analyze players on a specific map, rank, or platform. You can create \"subheaders\" that are a filtered view of the main header. The `create_subheader_tome` will create the subheader with the specified filter applied to the header tome.\n",
+    "\n",
+    "By convention, the tome names are in this format: `tome_name.start-date,end-data.comment`\n",
+    "\n",
+    "The start and end dates are the beginning and end of the data included in that tome."
    ]
   },
   {
