Mention inclusive/exclusive for dates

--- a/notebooks/tutorial/3 - Make header tome.ipynb
+++ b/notebooks/tutorial/3 - Make header tome.ipynb
@@ -114,7 +114,7 @@
     "\n",
     "By convention, the tome names are in this format: `tome_name.start-date,end-data.comment`\n",
     "\n",
-    "The start and end dates are the beginning and end of the data included in that tome."
+    "The `start-date` (inclusive) and `end-date` (exclusive) are the beginning and end of the data included in that tome."
    ]
   },
   {
