Use correct tome name convention

--- a/notebooks/tutorial/6 - Train data science models.ipynb
+++ b/notebooks/tutorial/6 - Train data science models.ipynb
@@ -74,8 +74,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = curator.get_dataframe('footsteps_by_rank')\n",
-    "keyset = curator.get_keyset('footsteps_by_rank')"
+    "footsteps_tome_name = 'footsteps_by_rank.2022-05-15,2022-05-15'\n",
+    "df = curator.get_dataframe(footsteps_tome_name)\n",
+    "keyset = curator.get_keyset(footsteps_tome_name)"
    ]
   },
   {
