User sets header and tome paths. Warning for bad name.

--- a/notebooks/tutorial/1 - Setup.ipynb
+++ b/notebooks/tutorial/1 - Setup.ipynb
@@ -34,10 +34,14 @@
     "Setup your enviornment to find all the yummy data science files on your computer box. We must set three things, \n",
     "\n",
     "1. Where you will save the data science files.\n",
-    "1. Where you will save your tomes (views of the data).\n",
+    "1. Where you will save your tomes (views of the data). Can be the same as step 1.\n",
     "1. What to call your header tome.\n",
     "\n",
     "These will be saved in a `.env` file in the `notebooks` folder. \n",
+    "\n",
+    "By convention, the tome names are in this format: `tome_name.start-date,end-data.comment`\n",
+    "\n",
+    "The `start-date` (inclusive) and `end-date` (exclusive) are the beginning and end of the data included in that tome and are in yyyy-mm-dd format.\n",
     "\n",
     "_**Fill out with your specific paths in the cell below, then run the notebook.**_\n"
    ]
@@ -49,8 +53,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection_path = 'PATH/TO/TOMES'\n",
-    "ds_collection_path = 'PATH/TO/CSDS'"
+    "import os\n",
+    "tome_collection_path = os.path.join('..','..','tmp')\n",
+    "ds_collection_path = os.path.join('..','..','tmp')\n",
+    "header_name = 'header_tome.2022-05-15,2022-05-15'"
    ]
   },
   {
@@ -60,35 +66,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "import platform\n",
+    "import re\n",
+    "import warnings\n",
     "\n",
-    "header_name = 'header_tome.2022-05-15,2022-05-15'\n",
+    "if not re.match(\"\\S+.\\d{4}-\\d{2}-\\d{2},\\d{4}-\\d{2}-\\d{2}.*\\S*\",header_name):\n",
+    "    warnings.warn(f'Header name of {header_name} does not match convention of header match')\n",
+    "\n",
     "ds_type = 'csds'\n",
-    "\n",
-    "if collection_path == 'PATH/TO/TOMES':\n",
-    "    collection_path = os.path.join('..','..','tmp','tome_root')\n",
-    "if ds_collection_path == 'PATH/TO/CSDS':\n",
-    "    ds_collection_path = os.path.join('..','..','tmp','csds_root')\n",
     "    \n",
-    "collection_path = os.path.abspath(collection_path)\n",
+    "tome_collection_path = os.path.abspath(tome_collection_path)\n",
     "ds_collection_path = os.path.abspath(ds_collection_path)\n",
     "\n",
     "system = platform.system()\n",
     "with open(os.path.join('..','.env'), 'w') as f:\n",
     "    if system == 'Windows':\n",
     "        f.write(f'export PURESKILLGG_TOME_DEFAULT_HEADER_NAME={header_name}\\n')\n",
-    "        f.write(f'export PURESKILLGG_TOME_COLLECTION_PATH={collection_path}\\n')\n",
+    "        f.write(f'export PURESKILLGG_TOME_COLLECTION_PATH={tome_collection_path}\\n')\n",
     "        f.write(f'export PURESKILLGG_TOME_DS_COLLECTION_PATH={ds_collection_path}\\n')\n",
     "        f.write(f'export PURESKILLGG_TOME_DS_TYPE={ds_type}\\n')\n",
     "    elif system == 'Mac':\n",
     "        f.write(f'PURESKILLGG_TOME_DEFAULT_HEADER_NAME = {header_name}\\n')\n",
-    "        f.write(f'PURESKILLGG_TOME_COLLECTION_PATH = {collection_path}\\n')\n",
+    "        f.write(f'PURESKILLGG_TOME_COLLECTION_PATH = {tome_collection_path}\\n')\n",
     "        f.write(f'PURESKILLGG_TOME_DS_COLLECTION_PATH = {ds_collection_path}\\n')\n",
     "        f.write(f'PURESKILLGG_TOME_DS_TYPE = {ds_type}\\n')\n",
     "    else:\n",
     "        f.write(f'PURESKILLGG_TOME_DEFAULT_HEADER_NAME={header_name}\\n')\n",
-    "        f.write(f'PURESKILLGG_TOME_COLLECTION_PATH={collection_path}\\n')\n",
+    "        f.write(f'PURESKILLGG_TOME_COLLECTION_PATH={tome_collection_path}\\n')\n",
     "        f.write(f'PURESKILLGG_TOME_DS_COLLECTION_PATH={ds_collection_path}\\n')\n",
     "        f.write(f'PURESKILLGG_TOME_DS_TYPE={ds_type}\\n')\n",
     "        if system != 'Linux':\n",
