Update 2 - Download data.ipynb

--- a/notebooks/tutorial/2 - Download data.ipynb
+++ b/notebooks/tutorial/2 - Download data.ipynb
@@ -96,6 +96,9 @@
     "\n",
     "ds_collection_path = os.environ.get('PURESKILLGG_TOME_DS_COLLECTION_PATH')\n",
     "\n",
+    "if not os.path.isdir(ds_collection_path):\n",
+    "    os.makedirs(ds_collection_path)\n",
+    "\n",
     "for index, url in enumerate(dataset_sample_urls):\n",
     "    print(\"working on \",url)\n",
     "    response = requests.get(url)\n",
