Fix convention typo
Co-authored-by: Evan Sosenko <evan@pureskill.gg>

--- a/notebooks/tutorial/1 - Setup.ipynb
+++ b/notebooks/tutorial/1 - Setup.ipynb
@@ -71,7 +71,7 @@
     "import warnings\n",
     "\n",
     "if not re.match(\"\\S+.\\d{4}-\\d{2}-\\d{2},\\d{4}-\\d{2}-\\d{2}.*\\S*\",header_name):\n",
-    "    warnings.warn(f'Header name of {header_name} does not match convention of header match')\n",
+    "    warnings.warn(f'Header name of {header_name} does not match convention of tome_name.start-date,end-data.comment')\n",
     "\n",
     "ds_type = 'csds'\n",
     "    \n",
