Update for latest dsdk (#7)
* Update setup link, header tome name, root path ends

* Repair default values for notebook 2

* Remove path_depth and fix subheader tome name

* Add note about default tome names

* update csgo dsdk and dsdk

* Mention inclusive/exclusive for dates

* Use proper tome name. specifiy header tome b/c bug

* Use correct tome name convention

* Use the same example path as notebook 1

* change path to csds to path to root

Co-authored-by: Evan Sosenko <evan@pureskill.gg>

* User sets header and tome paths. Warning for bad name.

* Update dsdk and csgodsdk

* Double check if dir exists, if not make it.

* Update 2 - Download data.ipynb

* Remove hotfix for bug from dsdk

* Fix convention typo

Co-authored-by: Evan Sosenko <evan@pureskill.gg>

Co-authored-by: Evan Sosenko <evan@pureskill.gg>

--- a/notebooks/tutorial/3 - Make header tome.ipynb
+++ b/notebooks/tutorial/3 - Make header tome.ipynb
@@ -86,7 +86,7 @@
    "outputs": [],
    "source": [
     "if not header_loader.exists:\n",
-    "    header_loader = curator.create_header_tome(path_depth=7)"
+    "    header_loader = curator.create_header_tome()"
    ]
   },
   {
@@ -110,7 +110,9 @@
    "source": [
     "## Make subheaders too\n",
     "\n",
-    "You might want to analyze players on a specific map, rank, or platform. You can create \"subheaders\" that are a filtered view of the main header. The `create_subheader_tome` will create the subheader with the specified filter applied to the header tome."
+    "You might want to analyze players on a specific map, rank, or platform. You can create \"subheaders\" that are a filtered view of the main header. The `create_subheader_tome` will create the subheader with the specified filter applied to the header tome.\n",
+    "\n",
+    "Remember that the convention for the tome names are: `tome_name.start-date,end-data.comment`"
    ]
   },
   {
@@ -123,7 +125,7 @@
     "def map_name_selector(map_name):\n",
     "    return lambda df: df['map_name']==map_name\n",
     "\n",
-    "subheader_loader = curator.create_subheader_tome('subheader_dust2', map_name_selector('de_dust2'))"
+    "subheader_loader = curator.create_subheader_tome('subheader_dust2.2022-05-15,2022-05-15', map_name_selector('de_dust2'))"
    ]
   },
   {
