--- a/notebooks/tutorial/5 - Create tome.ipynb
+++ b/notebooks/tutorial/5 - Create tome.ipynb
@@ -96,8 +96,9 @@
    "outputs": [],
    "source": [
     "# Initialize our \"footsteps_by_rank\" tome\n",
+    "footsteps_tome_name = 'footsteps_by_rank.2022-05-15,2022-05-15'\n",
     "tomer = curator.make_tome(\n",
-    "    'footsteps_by_rank',\n",
+    "    footsteps_tome_name,\n",
     "    ds_reading_instructions=[\n",
     "        {\n",
     "            \"channel\": 'player_footstep',\n",
@@ -137,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = curator.get_dataframe('footsteps_by_rank')"
+    "df = curator.get_dataframe(footsteps_tome_name)"
    ]
   },
   {
