Add cell to link to next notebook at bottom. add blank cell too.

--- a/notebooks/tutorial/1 - Setup.ipynb
+++ b/notebooks/tutorial/1 - Setup.ipynb
@@ -122,6 +122,22 @@
    "source": [
     "%load ../usual_suspects.py"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "044008ac",
+   "metadata": {},
+   "source": [
+    "Advance to the [next notebook](2%20-%20Download%20data.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a7de050",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
