--- a/notebooks/tutorial/2 - Download data.ipynb
+++ b/notebooks/tutorial/2 - Download data.ipynb
@@ -106,6 +106,22 @@
     "    zip_ref = zipfile.ZipFile(bytes_content)\n",
     "    zip_ref.extractall(ds_collection_path)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a50ad8bf",
+   "metadata": {},
+   "source": [
+    "Advance to the [next notebook](3%20-%20Make%20header%20tome.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3590d03",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
