--- a/notebooks/tutorial/3 - Make header tome.ipynb
+++ b/notebooks/tutorial/3 - Make header tome.ipynb
@@ -147,6 +147,22 @@
    "source": [
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cf8d284",
+   "metadata": {},
+   "source": [
+    "Advance to the [next notebook](4%20-%20Do%20datascience%20exploration.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7ae8e90",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
