--- a/notebooks/tutorial/4 - Do datascience exploration.ipynb
+++ b/notebooks/tutorial/4 - Do datascience exploration.ipynb
@@ -198,6 +198,22 @@
     "df_final['map_name'] = map_name\n",
     "df_final"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7e94269",
+   "metadata": {},
+   "source": [
+    "Advance to the [next notebook](5%20-%20Create%20tome.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce47baf7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
