--- a/notebooks/tutorial/5 - Create tome.ipynb
+++ b/notebooks/tutorial/5 - Create tome.ipynb
@@ -160,6 +160,22 @@
    "source": [
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58b114d9",
+   "metadata": {},
+   "source": [
+    "Advance to the [next notebook](6%20-%20Train%20data%20science%20models.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6aaea18",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
