--- a/notebooks/tutorial/7 - Getting data from the ADX.ipynb
+++ b/notebooks/tutorial/7 - Getting data from the ADX.ipynb
@@ -708,6 +708,22 @@
     "if disable_automatic_revision_transfer and agreed_to_terms:\n",
     "    disable_auto_exporting_adx_dataset_revisions_to_s3(dataset_id)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d759ee2",
+   "metadata": {},
+   "source": [
+    "No more cells to run!! GL HF."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93d57d48",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
