--- a/notebooks/tutorial/6 - Train data science models.ipynb
+++ b/notebooks/tutorial/6 - Train data science models.ipynb
@@ -197,6 +197,22 @@
     "else:\n",
     "    print('whoopsie, get gud kid.')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e4a503d",
+   "metadata": {},
+   "source": [
+    "Advance to the [next notebook](7%20-%20Getting%20data%20from%20the%20ADX.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61722af0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
