--- a/notebooks/tutorial/7 - Getting csds data from the ADX.ipynb
+++ b/notebooks/tutorial/7 - Getting csds data from the ADX.ipynb
@@ -714,7 +714,7 @@
    "id": "4d759ee2",
    "metadata": {},
    "source": [
-    "No more cells to run!! GL HF."
+    "Advance to the [next notebook](8%20-%20Getting%20tomes%20from%20the%20ADX.ipynb)."
    ]
   },
   {
