Fix link from 6 to 7

--- a/notebooks/tutorial/6 - Train data science models.ipynb
+++ b/notebooks/tutorial/6 - Train data science models.ipynb
@@ -203,7 +203,7 @@
    "id": "4e4a503d",
    "metadata": {},
    "source": [
-    "Advance to the [next notebook](7%20-%20Getting%20data%20from%20the%20ADX.ipynb)."
+    "Advance to the [next notebook](7%20-%20Getting%20csds%20data%20from%20the%20ADX.ipynb)."
    ]
   },
   {
