Add download step and usage.

--- a/notebooks/tutorial/8 - Getting tomes from the ADX.ipynb
+++ b/notebooks/tutorial/8 - Getting tomes from the ADX.ipynb
@@ -136,6 +136,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cdc0ecc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load ../usual_suspects.py\n",
+    "# pylint: disable=unused-import\n",
+    "import time\n",
+    "import os\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from pureskillgg_dsdk.tome import TomeCuratorFs\n",
+    "\n",
+    "pd.set_option(\"display.max_columns\", 150)\n",
+    "pd.set_option(\"display.max_rows\", 150)\n",
+    "pd.set_option(\"display.min_rows\", 150)\n",
+    "# pd.set_option('display.float_format', '{:.4f}'.format)\n",
+    "\n",
+    "curator = TomeCuratorFs()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bcb33449",
    "metadata": {},
    "outputs": [],
@@ -188,6 +214,136 @@
     "    prefix=prefix\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ea2023a",
+   "metadata": {},
+   "source": [
+    "# Transferring Data from S3 to Local\n",
+    "\n",
+    "There are many many ways to do this so we won't list them all here. Here is an example with the AWS CLI:\n",
+    "\n",
+    "```\n",
+    "aws s3 sync s3://my-bucket/tome/ /PATH/TO/ROOT/tome\n",
+    "```\n",
+    "\n",
+    "It is **CRITICALLY IMPORTANT** to maintain the path structure. In the example above, you could change the `/PATH/TO/ROOT` but the `/tome` is not something that you may change. The reader will not work because the folder structure is part of the key used to read each file."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec6647b2",
+   "metadata": {},
+   "source": [
+    "# Read and use the tomes!\n",
+    "\n",
+    "All that is left is to read in the tomes you're good to go. This is only the beginning!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c47d5f76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = curator.get_dataframe('header_tome.2021-05-01,2022-01-01')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f425517",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(df))\n",
+    "# prints 67260"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9e64299",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['map_name'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f018264",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = curator.get_dataframe('subheader_tome_active_duty.2021-05-01,2022-01-01')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8a5d87c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(df))\n",
+    "# prints 61465"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8efda32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['map_name'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74ca9770",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = curator.get_dataframe('channel_player_death.2021-05-01,2022-01-01')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cba6f77d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(df))\n",
+    "# prints 9012758"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1384d30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.rcParams[\"figure.figsize\"] = (15,8)\n",
+    "plt.hist(df['blind_duration'],bins=80,rwidth=0.85)\n",
+    "plt.xlabel('Seconds')\n",
+    "plt.ylabel('Count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a7d638f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
