Apply suggestions from code review
Co-authored-by: Evan Sosenko <evan@pureskill.gg>

--- a/notebooks/tutorial/8 - Getting tomes from the ADX.ipynb
+++ b/notebooks/tutorial/8 - Getting tomes from the ADX.ipynb
@@ -21,9 +21,9 @@
    "source": [
     "# Getting pre-built tomes from the ADX\n",
     "\n",
-    "The csds files are nice to work with because they contain full player telemetry and game event data. However, these are quite large and for many purposes\n",
+    "The csds files are powerful to work with because they contain full player telemetry and game event data. However, these are quite large and for many purposes. Tomes are often much smaller, so are inexpensive to download and share.\n",
     "\n",
-    "We built tomes for a historic set of data that was handy. This is data from the beginning of May 2021 thru the end of December 2021. Lots of aspects of the game are the same since then, so these tomes should be an excellent start for many data science projects you may be thinking of doing.\n",
+    "A second data set of pre-built tomes is included with the ADX subscription. This is data from the beginning of May 2021 through the end of December 2021. Many aspects of the game are haven't changed, so these tomes should be an excellent start for many projects.\n",
     "\n",
     "Here are the tomes and their sizes:\n",
     "\n",
@@ -62,7 +62,7 @@
    "source": [
     "# Get the data set ID for the tome data set\n",
     "\n",
-    "**Warning** This is different than the data set ID from the previous notebook. See below for where to go to get the correct data set ID for the tomes we have built. \n",
+    "**Important:** This is different than the data set id from the previous notebook. See below for where to go to get the correct data set ID for the tomes we have built. \n",
     "\n",
     "Also set your bucket name and prefix if needed."
    ]
@@ -110,7 +110,7 @@
    "source": [
     "# Download the tomes\n",
     "\n",
-    "Since the tomes are only about 15 GB the cost is very little to transfer all of them. Therefore we will simply transfer them all. Check the [previous notebook]() for a cost calculator."
+    "Since the tomes are only about 15 GB the cost is minimal to transfer all of them, so we will export them all. Check the [previous notebook]() for a cost calculator."
    ]
   },
   {
